# audio-driver

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  main.c  pins.h
.github/workflows/: tests.yml
docs/html/: adc_8c.html  adc_8c.js  adc_8c__incl.map  adc_8c__incl.md5  adc_8c_a0525248fb5d6c38f4179ebe11e23096c_cgraph.map  adc_8c_a953ea175da0dbc95f253ac2b67fccc81_cgraph.map  adc_8c_a953ea175da0dbc95f253ac2b67fccc81_cgraph.md5  adc_8c_a964a77f1c979db13e37136fbbdaf5071_cgraph.md5  adc_8c_ae11414d69ac7d7543abf98808d43e6b3_cgraph.map  adc_8c_ae11414d69ac7d7543abf98808d43e6b3_cgraph.md5  adc_8c_ae6c3b708b5ff997b7d1d57d5c71847d1_cgraph.map  adc_8c_ae6c3b708b5ff997b7d1d57d5c71847d1_cgraph.md5  adc_8c_source.html  adc_8h.html  adc_8h.js  adc_8h__dep__incl.map  adc_8h__dep__incl.md5  adc_8h__incl.map  adc_8h__incl.md5  adc_8h_a0525248fb5d6c38f4179ebe11e23096c_cgraph.md5  adc_8h_a87a6ee68677cd79d5025156f192a8338_cgraph.map  adc_8h_a87a6ee68677cd79d5025156f192a8338_cgraph.md5  adc_8h_a964a77f1c979db13e37136fbbdaf5071_cgraph.map  adc_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  (+74 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  (+19 more)
docs/latex/: adc_8c.tex  adc_8c__incl.md5  adc_8c_a0525248fb5d6c38f4179ebe11e23096c_cgraph.md5  adc_8c_a87a6ee68677cd79d5025156f192a8338_cgraph.md5  adc_8c_a953ea175da0dbc95f253ac2b67fccc81_cgraph.md5  adc_8c_a964a77f1c979db13e37136fbbdaf5071_cgraph.md5  adc_8c_ae6c3b708b5ff997b7d1d57d5c71847d1_cgraph.md5  adc_8c_source.tex  adc_8h.tex  adc_8h__dep__incl.md5  adc_8h__incl.md5  adc_8h_ae11414d69ac7d7543abf98808d43e6b3_cgraph.md5  adc_8h_source.tex  annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  libraries_8h.tex  libraries_8h__dep__incl.md5  libraries_8h__incl.md5  libraries_8h_source.tex  pins_8h.tex  pins_8h__dep__incl.md5  pins_8h__incl.md5  pins_8h_source.tex  potentiometer_8c.tex  potentiometer_8c__incl.md5  potentiometer_8c_a2df2100a5e2a92afbf7264c32741358e_cgraph.md5  potentiometer_8c_a68cfba892467fbe2d7340f0456007bc6_cgraph.md5  potentiometer_8c_source.tex  potentiometer_8h.tex  potentiometer_8h__dep__incl.md5  potentiometer_8h__incl.md5  potentiometer_8h_a1705b37d198b8f408151387165e51acd_cgraph.md5  potentiometer_8h_ac928c7b9fe64b80b6b7cc962fd71b7da_cgraph.md5  potentiometer_8h_source.tex  refman.tex  shm__writer_8c.tex  shm__writer_8c__incl.md5  shm__writer_8c_source.tex  (+14 more)
include/: adc.h  hardware.h  libraries.h  pins.h  potentiometer.h  shm_writer.h  switch_logic.h  wav_writer.h
src/: adc.c  hardware.c  mcp4011_driver.c  potentiometer.c  shm_writer.c  switch_logic.c  wav_writer.c
tests/: potentiometer_test.c  shm_writer_test.c  shm_writer_test_continous.c
